fix: fixed producer update
