# src/domain/request/ProducerCreateRequest.ts
@@ -1,7 +1,0 @@
-import { FarmRequest } from './FarmRequest';
-
-export interface ProducerCreateRequest {
-	name: string;
-	taxDocument: string;
-	farmData: FarmRequest;
-}
