# src/domain/request/ProducerRequest.ts
@@ -1,6 +1,8 @@
+import { FarmRequest } from './FarmRequest';
 import { AbstractUpdateRequest } from './AbstractUpdateRequest';
 
 export interface ProducerRequest extends AbstractUpdateRequest {
 	name?: string;
 	taxDocument?: string;
+	farmData?: FarmRequest;
 }
